tests/NormalTests/paczka1/fuzzy1/15224170.err
Error in line 5: r2QxcGe96 S471 11,3
Error in line 8: A637 A935 1,6
Error in line 9: A637 A637 14,9
Error in line 13: A637 A935 53,4
Error in line 24: FJEhz S732 98,0
Error in line 27: BgDeeGFQc S732 54,1
Error in line 34: GPe A637 90,0
